mobile header nav icon alignment fix

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -884,10 +884,12 @@ select.custom-arrow{
     }
 
     #header-mob a.navHandler{
-        padding: 6px 0px 0px;
-        height: 48px;
-        width: 48px;
-        color: #fff;
+      padding: 0px;
+      height: 38px;
+      width: 48px;
+      color: #fff;
+      top: 9px;
+      left: 1px;
     }
 
     a.nb-link {
