--- a/app/assets/stylesheets/search-view.scss
+++ b/app/assets/stylesheets/search-view.scss
@@ -222,16 +222,16 @@ a.home-navHandler {
 	}
 
   #header-mob {
-      background-color: #2272e2;
-      width: 100%;
-      padding: 10px 7px 10px 1px;
-      z-index: 1040;
-      border-bottom: 1px solid #ddd;
-      a.navHandler {
-        padding: 6px 0px 0px;
-        height: 48px;
-        width: 48px;
-        color: #fff;
+    background-color: #2272e2;
+    width: 100%;
+    padding: 10px 7px 10px 1px;
+    z-index: 1040;
+    border-bottom: 1px solid #ddd;
+    a.navHandler {
+      padding: 4px 0px 0px;
+      height: 48px;
+      width: 48px;
+      color: #fff;
     }
   }
   a.nb-link {
@@ -275,7 +275,6 @@ a.home-navHandler {
 	    font-size: 20px;
 	  }
 	}
-  
   a {transition: none;}
   .filter, .modal-full {
     width: 100%;
@@ -324,5 +323,3 @@ a.home-navHandler {
     position: relative;
 	}
 }
-
-
